[package]
name = "rusty-screeps"
version = "0.0.2"
authors = ["ReggaeMuffin <644950+reggaemuffin@users.noreply.github.com>"]
edition = "2018"
description = "An Abstraction Library for the programming game Screeps for Rust"
license = "MIT"
repository = "https://github.com/reggaemuffin/rusty-screeps"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.18"
log = "0.4.8"
fern = "0.5"
screeps-game-api = "0.6"
lazy_static = "1.3.0"
serde = "1.0.100"
serde_json = "1.0.54"
enum_dispatch = "0.1.3"
